# graphstore

./: .gitignore  CMakeLists.txt  README.md
algorithms/: Algorithms.cpp  Algorithms.h  CDLP.cpp  CDLP.h  GAPBSAlgorithms.cpp  GAPBSAlgorithms.h  LCC.cpp  LCC.h  PageRank.cpp  PageRank.h  SSSP.cpp  SSSP.h  WCC.cpp  WCC.h
analysis/: analysis.py  filter_dataset.py  interface-analysis.py  merge_dataset.py  presentation.py
analysis/data/: bll-random-free-list.csv  csr-vs-al.csv  interface-access-vs-direct-access.csv  ordered-free-list-bll-vc.csv
data-structure/: AccessPointers.cpp  AccessPointers.h  AdjacencySetTypes.h  EdgeBlock.cpp  EdgeBlock.h  EdgeDoesNotExistsPrecondition.cpp  EdgeDoesNotExistsPrecondition.h  EdgeVersionRecord.cpp  EdgeVersionRecord.h  FreeList.cpp  FreeList.h  IllegalOperation.cpp  IllegalOperation.h  Precondition.cpp  Precondition.h  SizeVersionChainEntry.cpp  SizeVersionChainEntry.h  SnapshotTransaction.cpp  SnapshotTransaction.h  TopologyInterface.cpp  TopologyInterface.h  Transaction.cpp  Transaction.h  TransactionManager.cpp  TransactionManager.h  VersionedBlockedEdgeIterator.cpp  VersionedBlockedEdgeIterator.h  VersionedBlockedPropertyEdgeIterator.cpp  VersionedBlockedPropertyEdgeIterator.h  VersionedTopologyInterface.cpp  VersionedTopologyInterface.h  VersioningBlockedSkipListAdjacencyList.cpp  VersioningBlockedSkipListAdjacencyList.h  VertexExistsPrecondition.cpp  VertexExistsPrecondition.h  VertexIndex.cpp  VertexIndex.h  data_types.cpp  data_types.h
data-structure/memory_allocation/: BlockProvider.cpp  BlockProvider.h
internal-driver/: BFSSourceSelector.cpp  BFSSourceSelector.h  Configuration.cpp  Configuration.h  Driver.cpp  Driver.h  Experiments.cpp  Experiments.h  GraphalyticsProperties.cpp  GraphalyticsProperties.h  Reporter.cpp  Reporter.h  main.cpp
internal-driver/data-src/: DataSource.cpp  DataSource.h  EdgeList.cpp  EdgeList.h  IOException.cpp  IOException.h  SortedCSRDataSource.cpp  SortedCSRDataSource.h
internal-driver/data-src/dataset-converter/: DatasetConverter.cpp  DatasetConverter.h  Options.cpp  Options.h  analyze-degrees.sh  binarize_graphalytics_model_solution.py  convert-datasets.sh  degree_information.py  main.cpp  prepare_graphalytics_set.sh
utils/: NotImplemented.cpp  NotImplemented.h  pointerTagging.h  utils.cpp  utils.h
